build while loop to print letters in name

--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
         //     userInput = prompt('Tell me the secret word');
         // }
 
-        for (var i = 0; i < 5; i++) {
-            console.log(i);
+        // for (var i = 1; i < 10; i = i + 2) {
+        //     console.log(i);
+        // }
+
+        var name = "James0";
+        var i = 0;
+        while (name[i] !== '0') {
+            console.log(name[i]);
+            i++;
         }
 
         console.log("Done!");
