fun exerciseto check for last letter using while loop

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         //     console.log(i);
         // }
 
-        var name = "James0";
+        var name = "RESPECT0";
         var i = 0;
         while (name[i] !== '0') {
             console.log(name[i]);
