first nested loop

--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
         //     console.log(i);
         // }
 
-        var name = "RESPECT0";
-        var i = 0;
-        while (name[i] !== '0') {
-            console.log(name[i]);
-            i++;
+        // var name = "RESPECT0";
+        // var i = 0;
+        // while (name[i] !== '0') {
+        //     console.log(name[i]);
+        //     i++;
+        // }
+
+        for (var i = 0; i < 3; i++) {
+            
+            for (var j = 0; j < 2; j++) {
+                console.log('i is ' + i);
+                console.log('j is ' + j);
+            }
         }
 
         console.log("Done!");
