concatenate string with for loop

--- a/index.html
+++ b/index.html
@@ -49,13 +49,20 @@
         //     i++;
         // }
 
-        for (var i = 0; i < 3; i++) {
+        // for (var i = 0; i < 3; i++) {
             
-            for (var j = 0; j < 2; j++) {
-                console.log('i is ' + i);
-                console.log('j is ' + j);
-            }
+        //     for (var j = 0; j < 2; j++) {
+        //         console.log('i is ' + i);
+        //         console.log('j is ' + j);
+        //     }
+        // }
+
+        var line = "-";
+        for (var i = 0; i < 5; i++) {
+            line = line + "x";
         }
+
+        console.log(line);
 
         console.log("Done!");
     
