Did two ascii drawings using nested for loops

--- a/index.html
+++ b/index.html
@@ -57,12 +57,33 @@
         //     }
         // }
 
-        var line = "-";
-        for (var i = 0; i < 5; i++) {
-            line = line + "x";
-        }
+        // var line = "-";
+        // for (var i = 0; i < 5; i++) {
+        //     line = line + "x";
+        // }
 
-        console.log(line);
+        // console.log(line);
+
+        // var bricks = "";
+        // for (var i = 0; i < 5; i++) {
+        //     bricks += "#"
+        //     for (var j = 0; j < 1; j++) {
+        //         console.log(bricks);
+        //     }
+        // }
+
+        // var stripes = "---------";
+        // var stars = "*****----";
+        // for (var i = 0; i < 4; i++) {
+        //     console.log(stripes);
+        //     if (i === 0) {
+        //         for (var j = 0; j < 3; j++) {
+        //             console.log(stars);
+        //         }
+        //     }
+        // }
+
+        
 
         console.log("Done!");
     
