--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
         //     }
         // }
 
-        
+        for (var i = 1; i < 5; i++) {
+            for (var j = 5; j >= i; j--) {
+                console.log("#");
+            }
+        }
 
         console.log("Done!");
     
